2002-05-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/sybase/Makefile.am: removed .server-related stuff.

2002-05-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c: change "boolean" by "bool".

2002-05-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-row.c (gda_row_attributes_get_length): return 0 if
	the parameter is NULL, not -1.
	(gda_row_attributes_get_field): check index before using it.

2002-05-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-recordset.c:
	(gda_recordset_get_value_at): retrieve the correct column.

	Yahoo! Now gda-test runs correctly for the postgres provider.

2002-05-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_search_entry): check pointers
	before calling strcmp().

2002-05-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* data/config: added URI= to the DSN entry.

	* providers/default/gda-default-provider.c:
	(get_databases): check for NULL.

	* providers/default/libmain.c: added function prototypes.
	(plugin_get_name): changed "default" to "Default"

	* providers/postgres/libmain.c: added function prototypes.

2002-05-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: GnomeVFS is no longer a dependency.

	* libgda/gda-init.c (gda_init): don't call gnome_vfs_init.

	* libgda/gda-util.c (gda_file_save):
	(gda_file_load): changed to not use GnomeVFS.

2002-05-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-client.c: fixed SIGSEGV when freeing the provider hash.

	* gda-recordset.c: remove local variable left by mistake.
	
	* gda-row.c (gda_row_attributes_get_length): allow NULL as input.
	This is a temporary fix until we have get_n_rows for recorsets.

2002-05-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c:
	* libgda/gda-recordset.c: fixes to correctly overwrite global
	configuration with the one provided by the user.

2002-05-01  Rodrigo Moya <rodrigo@gnome-db.org>
